# Beman.Example

./: CMakeLists.txt  LICENSE.txt  README.md
.ci/docker/: rockylinux.Dockerfile  ubuntu.Dockerfile
.github/: CODEOWNERS
.github/workflows/: ci_tests.yml
examples/: CMakeLists.txt  sample_usage.cpp
include/Beman/Example/: example.hpp
src/: CMakeLists.txt
src/Beman/: CMakeLists.txt
src/Beman/Example/: CMakeLists.txt  example.cpp
src/Beman/Example/tests/: CMakeLists.txt  example.t.cpp
